added project descriptions/links

--- a/index.html
+++ b/index.html
@@ -298,23 +298,15 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Title</h2>
+                            <h2>Battleboat</h2>
                             <hr class="star-primary">
                             <img src="img/battleboat.png" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                            <p>Full stack MEAN app, one player demo version of the clasic game, Battleship.  Also makes use of Socket.io and MaterializeCSS.  Full version coming soon.</p>
                             <ul class="list-inline item-details">
-                                <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
-                                    </strong>
-                                </li>
-                                <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
-                                    </strong>
-                                </li>
-                                <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
-                                    </strong>
-                                </li>
+                              <li>
+                                  <strong><a href="https://github.com/JameyMcAuliffe/battleship">Github</a>
+                                  </strong>
+                              </li>
                             </ul>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
@@ -335,21 +327,17 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Title</h2>
+                            <h2>Rate My NSS Instructor</h2>
                             <hr class="star-primary">
                             <img src="img/rmt.png" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                            <p>Angular CRUD app used to rate and comment on our front end instructor at NSS.  Storage with Firebase, and uses MaterializeCSS as well.</p>
                             <ul class="list-inline item-details">
-                                <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
+                                <li>
+                                    <strong><a href="https://ratemyteacher-472c5.firebaseapp.com/#/">Deployed</a>
                                     </strong>
                                 </li>
-                                <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
-                                    </strong>
-                                </li>
-                                <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
+                                <li>
+                                    <strong><a href="https://github.com/JameyMcAuliffe/rate-my-nss-instructor">GitHub</a>
                                     </strong>
                                 </li>
                             </ul>
