--- a/index.html
+++ b/index.html
@@ -181,6 +181,52 @@
         </div>
     </section>
 
+    <!-- Technologies Section -->
+    <section id="tech">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 text-center">
+            <h2>Technologies</h2>
+            <hr class="star-primary">
+             <div class="row">
+              <div class="col-sm-12 text-center">
+                <div class="techLogos">   
+                  <a href="https://angularjs.org/"><img src="img/angular.png" height="50"></a>
+                  <a href="https://babeljs.io/"><img src="img/babel.png" height="50"></a>
+                  <a href="http://getbootstrap.com/"><img src="img/bootstrap.png" height="50"></a>
+                  <a href="https://bower.io/"><img src="img/bower.png" height="50"></a>
+                  <a href="http://browserify.org/"><img src="img/browserify2.png" height="50"></a>
+                  <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/CSS3"><img src="img/css3.png" height="50"></a>
+                  <a href="http://www.embeddedjs.com/"><img src="img/ejs.png" height="50"></a>
+                  <a href="https://expressjs.com/"><img src="img/express.png" height="50"></a>
+                  <a href="https://firebase.google.com"><img src="img/firebase.png" height="50"></a>
+                  <a href="https://meanjs.org/"><img src="img/fullMean.png" height="50"></a>
+                  <a href="https://github.com/"><img src="img/github.png" height="50"></a>
+                  <a href="https://git-scm.com/"><img src="img/git.png" height="50"></a>
+                  <a href="http://gulpjs.com/"><img src="img/gulp.png" height="50"></a>
+                  <a href="https://developer.mozilla.org/en-US/docs/Web/Guide/HTML/HTML5"><img src="img/html5.png" height="50"></a>
+                  <a href="http://jasmine.github.io/"><img src="img/jasmine.png" height="50"></a>
+                  <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript"><img src="img/jslogo.png" height="50"></a>
+                  <a href="http://jquery.com/"><img src="img/jq2.png" height="50"></a>
+                  <a href="http://materializecss.com/"><img src="img/materialize.png" height="50"></a>
+                  <a href="https://mochajs.org/"><img src="img/mocha.png" height="50"></a>
+                  <a href="https://www.mongodb.com/"><img src="img/mongo.png" height="50"></a>
+                  <a href="http://mongoosejs.com/"><img src="img/mongoose.png" height="50"></a>
+                  <a href="https://nodejs.org/en/"><img src="img/nodejs.png" height="50"></a>
+                  <a href="http://nodemon.io/"><img src="img/nodemon.png" height="50"></a>
+                  <a href="https://www.npmjs.com/"><img src="img/npm.png" height="50"></a>
+                  <a href="https://pugjs.org"><img src="img/pugSolid.png" height="50"></a>
+                  <a href="http://redis.io/"><img src="img/redis.png" height="50"></a>
+                  <a href="http://sass-lang.com/"><img src="img/sass.png" height="50"></a>
+                  <a href="http://socket.io/"><img src="img/socketio.png" height="50"></a>
+                </div> <!-- <div class="techLogos"> -->
+              </div> <!-- <div class="col-sm-12 text-center"> -->
+            </div> <!-- <div class="row"> -->
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- Contact Section -->
     <section id="contact">
         <div class="container">
