changed pic, moved tech section

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive my-pic" src="img/me.jpg" alt="">
+                    <img class="img-responsive my-pic" src="img/me2.jpeg" alt="">
                     <div class="intro-text">
                         <span class="name">Jamey McAuliffe</span>
                         <hr class="star-light">
@@ -154,35 +154,7 @@
                 </div>
             </div>
         </div>
-    </section>
-
-    <!-- About Section -->
-    <section class="success" id="about">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2>About</h2>
-                    <hr class="star-light">
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-4 col-lg-offset-2">
-                    <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
-                </div>
-                <div class="col-lg-4">
-                    <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
-                </div>
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a href="#" class="btn btn-lg btn-outline">
-                        <i class="fa fa-download"></i> Download Theme
-                    </a>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Technologies Section -->
-    <section id="tech">
+          <section id="tech">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
@@ -219,13 +191,85 @@
                   <a href="http://redis.io/"><img src="img/redis.png" height="50"></a>
                   <a href="http://sass-lang.com/"><img src="img/sass.png" height="50"></a>
                   <a href="http://socket.io/"><img src="img/socketio.png" height="50"></a>
-                </div> <!-- <div class="techLogos"> -->
-              </div> <!-- <div class="col-sm-12 text-center"> -->
-            </div> <!-- <div class="row"> -->
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </section>
+    </section>
+
+    <!-- About Section -->
+    <section class="success" id="about">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2>About</h2>
+                    <hr class="star-light">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-4 col-lg-offset-2">
+                    <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
+                </div>
+                <div class="col-lg-4">
+                    <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
+                </div>
+                <div class="col-lg-8 col-lg-offset-2 text-center">
+                    <a href="#" class="btn btn-lg btn-outline">
+                        <i class="fa fa-download"></i> Download Theme
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Technologies Section -->
+  <!--   <section id="tech">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 text-center">
+            <h2>Technologies</h2>
+            <hr class="star-primary">
+             <div class="row">
+              <div class="col-sm-12 text-center">
+                <div class="techLogos">   
+                  <a href="https://angularjs.org/"><img src="img/angular.png" height="50"></a>
+                  <a href="https://babeljs.io/"><img src="img/babel.png" height="50"></a>
+                  <a href="http://getbootstrap.com/"><img src="img/bootstrap.png" height="50"></a>
+                  <a href="https://bower.io/"><img src="img/bower.png" height="50"></a>
+                  <a href="http://browserify.org/"><img src="img/browserify2.png" height="50"></a>
+                  <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/CSS3"><img src="img/css3.png" height="50"></a>
+                  <a href="http://www.embeddedjs.com/"><img src="img/ejs.png" height="50"></a>
+                  <a href="https://expressjs.com/"><img src="img/express.png" height="50"></a>
+                  <a href="https://firebase.google.com"><img src="img/firebase.png" height="50"></a>
+                  <a href="https://meanjs.org/"><img src="img/fullMean.png" height="50"></a>
+                  <a href="https://github.com/"><img src="img/github.png" height="50"></a>
+                  <a href="https://git-scm.com/"><img src="img/git.png" height="50"></a>
+                  <a href="http://gulpjs.com/"><img src="img/gulp.png" height="50"></a>
+                  <a href="https://developer.mozilla.org/en-US/docs/Web/Guide/HTML/HTML5"><img src="img/html5.png" height="50"></a>
+                  <a href="http://jasmine.github.io/"><img src="img/jasmine.png" height="50"></a>
+                  <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript"><img src="img/jslogo.png" height="50"></a>
+                  <a href="http://jquery.com/"><img src="img/jq2.png" height="50"></a>
+                  <a href="http://materializecss.com/"><img src="img/materialize.png" height="50"></a>
+                  <a href="https://mochajs.org/"><img src="img/mocha.png" height="50"></a>
+                  <a href="https://www.mongodb.com/"><img src="img/mongo.png" height="50"></a>
+                  <a href="http://mongoosejs.com/"><img src="img/mongoose.png" height="50"></a>
+                  <a href="https://nodejs.org/en/"><img src="img/nodejs.png" height="50"></a>
+                  <a href="http://nodemon.io/"><img src="img/nodemon.png" height="50"></a>
+                  <a href="https://www.npmjs.com/"><img src="img/npm.png" height="50"></a>
+                  <a href="https://pugjs.org"><img src="img/pugSolid.png" height="50"></a>
+                  <a href="http://redis.io/"><img src="img/redis.png" height="50"></a>
+                  <a href="http://sass-lang.com/"><img src="img/sass.png" height="50"></a>
+                  <a href="http://socket.io/"><img src="img/socketio.png" height="50"></a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section> -->
 
     <!-- Contact Section -->
     <section id="contact">
