edited about section

--- a/index.html
+++ b/index.html
@@ -211,15 +211,10 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
+                    <p>Well hello there, as you've likely seen, my name is Jamey McAuliffe, and I am a Junior Developer.  My coding journey began with online tutorials, igniting a fire that sparked a move from Atlanta to Nashville in order to attend the Nashville Software School starting May of 2016.</p>
                 </div>
                 <div class="col-lg-4">
-                    <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
-                </div>
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a href="#" class="btn btn-lg btn-outline">
-                        <i class="fa fa-download"></i> Download Theme
-                    </a>
+                    <p>The next six months consisted of the most challenging and invigorating work of my life.  I now spend my days using the tools I've gained from NSS to further expand my knowledge of what feels like an infinite universe of opportunity.</p>
                 </div>
             </div>
         </div>
