edited projects modals

--- a/index.html
+++ b/index.html
@@ -555,18 +555,14 @@
                             <h2>Project Title</h2>
                             <hr class="star-primary">
                             <img src="img/ff.png" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                            <p>A game in which dysfunctional descendants of a cantankerous grandfather engage the old man in verbal slings and arrows until either he or the family claim victory for the battle of Christmas dinner. This web app makes use of object oriented programming, Browserify, Gulp, Sass, and Jade/Pug.</p>
                             <ul class="list-inline item-details">
-                                <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
+                                <!-- <li>
+                                    <strong><a href="nss­day­cohort­14.github.io/gauntlet­team­rerun/">Deployed</a>
                                     </strong>
-                                </li>
-                                <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
-                                    </strong>
-                                </li>
-                                <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
+                                </li> -->
+                                <li>
+                                    <strong><a href="https://github.com/nss-day-cohort-14/gauntlet-team-rerun">GitHub</a>
                                     </strong>
                                 </li>
                             </ul>
