--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     <hr class="star-primary">
                 </div>
             </div>
-            <div class="row">
+            <div class="row" id="port-div">
                 <div class="col-sm-4 portfolio-item">
                     <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
@@ -132,7 +132,7 @@
                         <img src="img/pizza.png" class="img-responsive" alt="">
                     </a>
                 </div>
-                <div class="col-sm-4 portfolio-item">
+                <!-- <div class="col-sm-4 portfolio-item">
                     <a href="#portfolioModal5" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
@@ -141,7 +141,7 @@
                         </div>
                         <img src="img/portfolio/safe.png" class="img-responsive" alt="">
                     </a>
-                </div>
+                </div> -->
                 <div class="col-sm-4 portfolio-item">
                     <a href="#portfolioModal6" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
