updated portfolio modals

--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        Copyright &copy; Jamey McAuliffe 2016
+                        Copyright &copy; Jamey McAuliffe 2017
                     </div>
                 </div>
             </div>
@@ -444,18 +444,10 @@
                             <h2>Project Title</h2>
                             <hr class="star-primary">
                             <img src="img/whack.png" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                            <p>A group project take on the classic Whack-A-Mole game, all in good fun, of course.  Uses Express, Socket.io, and MongoDB, updating each game's score instantly.  All game logic is built on the back end using Node.js, look and design is taken care of on the front end.</p>
                             <ul class="list-inline item-details">
-                                <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
-                                    </strong>
-                                </li>
-                                <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
-                                    </strong>
-                                </li>
-                                <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
+                                <li>
+                                    <strong><a href="https://github.com/JohnDHamm/whack-a-mole">GitHub</a>
                                     </strong>
                                 </li>
                             </ul>
@@ -481,18 +473,10 @@
                             <h2>Project Title</h2>
                             <hr class="star-primary">
                             <img src="img/pizza.png" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                           <p>Pizza Store app built on Node.js using Express, Pug, Redis, Mongoose, and Passport.  Users can register/login, create an order, which is saved on MongoDB, or contact the company.  Doesn't he look tasty?</p>
                             <ul class="list-inline item-details">
-                                <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
-                                    </strong>
-                                </li>
-                                <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
-                                    </strong>
-                                </li>
-                                <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
+                                <li>
+                                    <strong><a href="https://github.com/JameyMcAuliffe/express101-sscotth">GitHub</a>
                                     </strong>
                                 </li>
                             </ul>
