added react to tech section

--- a/index.html
+++ b/index.html
@@ -191,6 +191,7 @@
                   <a href="http://redis.io/"><img src="img/redis.png" height="50"></a>
                   <a href="http://sass-lang.com/"><img src="img/sass.png" height="50"></a>
                   <a href="http://socket.io/"><img src="img/socketio.png" height="50"></a>
+                  <a href="http://reactjs.org/"><img src="img/react.png" height="50"></a>
                 </div>
               </div>
             </div>
