added typescript img/link

--- a/index.html
+++ b/index.html
@@ -202,6 +202,7 @@
                   <a href="http://sass-lang.com/"><img src="img/sass.png" height="50"></a>
                   <a href="http://socket.io/"><img src="img/socketio.png" height="50"></a>
                   <a href="http://reactjs.org/"><img src="img/react.png" height="50"></a>
+                  <a href="http://www.typescriptlang.org/"><img src="img/typescript.png" height="50"></a>
                 </div>
               </div>
             </div>
