--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/pizza.png" class="img-responsive" alt="">
+                        <img src="img/clock-react.png" class="img-responsive" alt="">
                     </a>
                 </div>
                 <!-- <div class="col-sm-4 portfolio-item">
@@ -511,13 +511,13 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Title</h2>
+                            <h2>Clock-o-rama 3004</h2>
                             <hr class="star-primary">
-                            <img src="img/pizza.png" class="img-responsive img-centered" alt="">
-                           <p>Pizza Store app built on Node.js using Express, Pug, Redis, Mongoose, and Passport.  Users can register/login, create an order, which is saved on MongoDB, or contact the company.  Doesn't he look tasty?</p>
+                            <img src="img/clock-react.png" class="img-responsive img-centered" alt="">
+                           <p>Highly advanced/basic clock app built with React.  Users can set the time and then watch the time as long as their hearts desire.  </p>
                             <ul class="list-inline item-details">
                                 <li>
-                                    <strong><a href="https://github.com/JameyMcAuliffe/express101-sscotth">GitHub</a>
+                                    <strong><a href="https://github.com/JameyMcAuliffe/clock-react">GitHub</a>
                                     </strong>
                                 </li>
                             </ul>
