added chatty project

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/battleboat.png" class="img-responsive" alt="">
+                        <img src="img/chatty.png" class="img-responsive" alt="">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -159,7 +159,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/ff.png" class="img-responsive" alt="">
+                        <img src="img/battleboat.png" class="img-responsive" alt="">
                     </a>
                 </div>
             </div>
@@ -364,7 +364,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        Copyright &copy; Jamey McAuliffe 2017
+                        Copyright &copy; Jamey McAuliffe 2018
                     </div>
                 </div>
             </div>
@@ -420,13 +420,17 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Battleboat</h2>
+                            <h2>Let's Get Chatty</h2>
                             <hr class="star-primary">
-                            <img src="img/battleboat.png" class="img-responsive img-centered" alt="">
-                            <p>Full stack MEAN app, one player demo version of the clasic game, Battleship.  Also makes use of Socket.io and MaterializeCSS.  Full version coming soon.</p>
+                            <img src="img/chatty.png" class="img-responsive img-centered" alt="">
+                            <p>Messaging app built on Node.js with Express server, real time integration with Socket.io, and Axios for communication with the Giphy API.  Also a test suite set up with Expect and Mocha.</p>
                             <ul class="list-inline item-details">
                               <li>
-                                  <strong><a href="https://github.com/JameyMcAuliffe/battleship">Github</a>
+                                 <strong><a href="https://boiling-plains-52857.herokuapp.com/">Deployed</a>
+                                  </strong>
+                              </li>
+                              <li>
+                                  <strong><a href="https://github.com/JameyMcAuliffe/node-chat">Github</a>
                                   </strong>
                               </li>
                             </ul>
@@ -579,16 +583,12 @@
                         <div class="modal-body">
                             <h2>Project Title</h2>
                             <hr class="star-primary">
-                            <img src="img/ff.png" class="img-responsive img-centered" alt="">
-                            <p>A game in which dysfunctional descendants of a cantankerous grandfather engage the old man in verbal slings and arrows until either he or the family claim victory for the battle of Christmas dinner. This web app makes use of object oriented programming, Browserify, Gulp, Sass, and Jade/Pug.</p>
+                            <img src="img/battleboat.png" class="img-responsive img-centered" alt="">
+                            <p>Full stack MEAN app, one player demo version of the clasic game, Battleship.  Also makes use of Socket.io and MaterializeCSS.</p>
                             <ul class="list-inline item-details">
-                                <!-- <li>
-                                    <strong><a href="nss­day­cohort­14.github.io/gauntlet­team­rerun/">Deployed</a>
-                                    </strong>
-                                </li> -->
                                 <li>
-                                    <strong><a href="https://github.com/nss-day-cohort-14/gauntlet-team-rerun">GitHub</a>
-                                    </strong>
+                                  <strong><a href="https://github.com/JameyMcAuliffe/battleship">Github</a>
+                                  </strong>
                                 </li>
                             </ul>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
