edit to chatty desc

--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
                             <h2>Let's Get Chatty</h2>
                             <hr class="star-primary">
                             <img src="img/chatty.png" class="img-responsive img-centered" alt="">
-                            <p>Messaging app built on Node.js with Express server, real time integration with Socket.io, and Axios for communication with the Giphy API.  Also a test suite set up with Expect and Mocha.</p>
+                            <p>Messaging app built on Node.js with Express server, real time integration with Socket.io, and Axios for communication with the Giphy API.  Mostly jQuery for DOM manipulation with some templating using Mustache.js.  Also a test suite set up with Expect and Mocha.</p>
                             <ul class="list-inline item-details">
                               <li>
                                  <strong><a href="https://boiling-plains-52857.herokuapp.com/">Deployed</a>
