added hard-g-iffy to portfolio

--- a/index.html
+++ b/index.html
@@ -71,11 +71,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive my-pic" src="img/me2.jpeg" alt="">
+                    <img class="img-responsive my-pic" src="img/me.jpg" alt="">
                     <div class="intro-text">
                         <span class="name">Jamey McAuliffe</span>
                         <hr class="star-light">
-                        <span class="skills">Junior Developer</span>
+                        <span class="skills">Software Developer</span>
                     </div>
                 </div>
             </div>
@@ -92,6 +92,16 @@
                 </div>
             </div>
             <div class="row" id="port-div">
+                <div class="col-sm-4 portfolio-item">
+                    <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
+                        <div class="caption">
+                            <div class="caption-content">
+                                <i class="fa fa-search-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="img/giphy-1.png" class="img-responsive" alt="">
+                    </a>
+                </div>
                 <div class="col-sm-4 portfolio-item">
                     <a href="#portfolioModal0" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
@@ -132,7 +142,7 @@
                         <img src="img/whack.png" class="img-responsive" alt="">
                     </a>
                 </div>
-                <div class="col-sm-4 portfolio-item">
+              <!--   <div class="col-sm-4 portfolio-item">
                     <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
@@ -141,7 +151,7 @@
                         </div>
                         <img src="img/clock-react.png" class="img-responsive" alt="">
                     </a>
-                </div>
+                </div> -->
                 <!-- <div class="col-sm-4 portfolio-item">
                     <a href="#portfolioModal5" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
@@ -364,7 +374,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        Copyright &copy; Jamey McAuliffe 2018
+                        Copyright &copy; Jamey McAuliffe 2019
                     </div>
                 </div>
             </div>
@@ -515,13 +525,17 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Clock-o-rama 3004</h2>
+                            <h2>(Hard G)-iffy</h2>
                             <hr class="star-primary">
-                            <img src="img/clock-react.png" class="img-responsive img-centered" alt="">
-                           <p>Highly advanced/basic clock app built with React.  Users can set the time and then watch the time as long as their hearts desire.  </p>
+                            <img src="img/giphy-2.png" class="img-responsive img-centered" alt="">
+                           <p>Basic clone of Giphy built with React.js.  Uses Axios for requests to the Giphy API, responsive design.</p>
                             <ul class="list-inline item-details">
                                 <li>
-                                    <strong><a href="https://github.com/JameyMcAuliffe/clock-react">GitHub</a>
+                                    <strong><a href="https://hard-g-iffy.herokuapp.com/">Deployed</a>
+                                    </strong>
+                                </li>
+                                <li>
+                                    <strong><a href="https://github.com/JameyMcAuliffe/hard-g-iffy">GitHub</a>
                                     </strong>
                                 </li>
                             </ul>
