--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Jamey McAuliffe | Junior Developer</title>
+    <title>Jamey McAuliffe | Software Developer</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -41,7 +41,7 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand" href="#page-top">Jamey McAuliffe</a>
+                <a class="navbar-brand" href="#page-top">JAMEY McAULIFFE</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -73,7 +73,7 @@
                 <div class="col-lg-12">
                     <img class="img-responsive my-pic" src="img/me.jpg" alt="">
                     <div class="intro-text">
-                        <span class="name">Jamey McAuliffe</span>
+                        <span class="name">JAMEY McAULIFFE</span>
                         <hr class="star-light">
                         <span class="skills">Software Developer</span>
                     </div>
@@ -350,6 +350,7 @@
                 <div class="row">
                     <div class="footer-col col-md-4">
                         <h3>Location</h3>
+                        <p>Asheville, NC</p>
                         <p>Nashville, TN</p>
                     </div>
                     <div class="footer-col col-md-4">
