added hangman project

--- a/index.html
+++ b/index.html
@@ -92,6 +92,16 @@
                 </div>
             </div>
             <div class="row" id="port-div">
+                 <div class="col-sm-4 portfolio-item">
+                    <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
+                        <div class="caption">
+                            <div class="caption-content">
+                                <i class="fa fa-search-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="img/hangman-1.png" class="img-responsive" alt="">
+                    </a>
+                </div>
                 <div class="col-sm-4 portfolio-item">
                     <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
@@ -130,16 +140,6 @@
                             </div>
                         </div>
                         <img src="img/rmt.png" class="img-responsive" alt="">
-                    </a>
-                </div>
-                <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <i class="fa fa-search-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="img/whack.png" class="img-responsive" alt="">
                     </a>
                 </div>
               <!--   <div class="col-sm-4 portfolio-item">
@@ -497,13 +497,17 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Title</h2>
+                            <h2>Hangman</h2>
                             <hr class="star-primary">
-                            <img src="img/whack.png" class="img-responsive img-centered" alt="">
-                            <p>A group project take on the classic Whack-A-Mole game, all in good fun, of course.  Uses Express, Socket.io, and MongoDB, updating each game's score instantly.  All game logic is built on the back end using Node.js, look and design is taken care of on the front end.</p>
+                            <img src="img/hangman-2.png" class="img-responsive img-centered" alt="">
+                            <p>The classic Hangman game, built entirely with functional components using React Hooks.  Uses Axios for calls to the Wordnik API.  Styling with CSS and a highly sophisticated Paint X custom made background.</p>
                             <ul class="list-inline item-details">
                                 <li>
-                                    <strong><a href="https://github.com/JohnDHamm/whack-a-mole">GitHub</a>
+                                    <strong><a href="https://hangman-jpm.herokuapp.com">Deployed</a>
+                                    </strong>
+                                </li>
+                                <li>
+                                    <strong><a href="https://github.com/JameyMcAuliffe/hangman-react">GitHub</a>
                                     </strong>
                                 </li>
                             </ul>
