--- a/index.html
+++ b/index.html
@@ -93,6 +93,16 @@
             </div>
             <div class="row" id="port-div">
                  <div class="col-sm-4 portfolio-item">
+                    <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
+                        <div class="caption">
+                            <div class="caption-content">
+                                <i class="fa fa-search-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="img/cookbook-1.png" class="img-responsive" alt="">
+                    </a>
+                 </div>
+                 <div class="col-sm-4 portfolio-item">
                     <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
@@ -132,16 +142,7 @@
                         <img src="img/chatty.png" class="img-responsive" alt="">
                     </a>
                 </div>
-                <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <i class="fa fa-search-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="img/rmt.png" class="img-responsive" alt="">
-                    </a>
-                </div>
+             
               <!--   <div class="col-sm-4 portfolio-item">
                     <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
@@ -464,17 +465,17 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Rate My NSS Instructor</h2>
+                            <h2>Cookbook</h2>
                             <hr class="star-primary">
-                            <img src="img/rmt.png" class="img-responsive img-centered" alt="">
-                            <p>Angular CRUD app used to rate and comment on our front end instructor at NSS.  Storage with Firebase, and uses MaterializeCSS as well.</p>
+                            <img src="img/cookbook-2.png" class="img-responsive img-centered" alt="">
+                            <p>React CRUD recipe book app using entirely functional components with React Hooks.  Firestore for the database, Bootstrap 4 for styling.</p>
                             <ul class="list-inline item-details">
                                 <li>
-                                    <strong><a href="https://ratemyteacher-472c5.firebaseapp.com/#/">Deployed</a>
+                                    <strong><a href="https://cookbook-react-62ffa.firebaseapp.com">Deployed</a>
                                     </strong>
                                 </li>
                                 <li>
-                                    <strong><a href="https://github.com/JameyMcAuliffe/rate-my-nss-instructor">GitHub</a>
+                                    <strong><a href="https://github.com/JameyMcAuliffe/cookbook-react">GitHub</a>
                                     </strong>
                                 </li>
                             </ul>
