updated hangman link

--- a/index.html
+++ b/index.html
@@ -504,7 +504,7 @@
                             <p>The classic Hangman game, built entirely with functional components using React Hooks.  Uses Axios for calls to the Wordnik API.  Styling with CSS and a highly sophisticated Paint X custom made background.</p>
                             <ul class="list-inline item-details">
                                 <li>
-                                    <strong><a href="https://hangman-jpm.herokuapp.com">Deployed</a>
+                                    <strong><a href="https://hangman-171b6.firebaseapp.com/">Deployed</a>
                                     </strong>
                                 </li>
                                 <li>
