updated project section

--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
                             <h2>Cookbook</h2>
                             <hr class="star-primary">
                             <img src="img/cookbook-2.png" class="img-responsive img-centered" alt="">
-                            <p>React CRUD recipe book app using entirely functional components with React Hooks.  Firestore for the database, Bootstrap 4 for styling.</p>
+                            <p>Recipe book CRUD app using entirely functional components with React Hooks.  Firestore for the database, Bootstrap 4 for styling, responsive design.</p>
                             <ul class="list-inline item-details">
                                 <li>
                                     <strong><a href="https://cookbook-react-62ffa.firebaseapp.com">Deployed</a>
@@ -501,7 +501,7 @@
                             <h2>Hangman</h2>
                             <hr class="star-primary">
                             <img src="img/hangman-2.png" class="img-responsive img-centered" alt="">
-                            <p>The classic Hangman game, built entirely with functional components using React Hooks.  Uses Axios for calls to the Wordnik API.  Styling with CSS and a highly sophisticated Paint X custom made background.</p>
+                            <p>The classic Hangman game, built entirely with functional components using React Hooks.  Uses Axios for calls to the Wordnik API.  Styling with CSS modules and a highly sophisticated Paint X custom made background.</p>
                             <ul class="list-inline item-details">
                                 <li>
                                     <strong><a href="https://hangman-171b6.firebaseapp.com/">Deployed</a>
