--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
                             <h2>Cookbook</h2>
                             <hr class="star-primary">
                             <img src="img/cookbook-2.png" class="img-responsive img-centered" alt="">
-                            <p>Recipe book CRUD app using entirely functional components with React Hooks.  Firestore for the database, Bootstrap 4 for styling, responsive design.</p>
+                            <p>Recipe book CRUD app using entirely functional components with React Hooks.  Firestore for the database, authentication through Firebase provided as global state with React's Context API, Bootstrap 4 for styling, responsive design.</p>
                             <ul class="list-inline item-details">
                                 <li>
                                     <strong><a href="https://cookbook-react-62ffa.firebaseapp.com">Deployed</a>
